--- a/index.html
+++ b/index.html
@@ -12,68 +12,95 @@
     </style>
 </head>
 <body>
-    <!--Navbar-->
-    <header class="text-gray-600 body-font h-16 flex items-center justify-betwen px-4 fixed top-0 left-0 right-0 shadow-md z-50 bg-white-900">
-        <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center z-50 bg-white-900 bg-opacity-500">
-          <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-            <img src="image/bint.png" alt="logo" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-white-100 rounded-full" viewBox="0 0 24 24">
-              <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-            </svg>
-            <span class="ml-3 text-2xl font-bold">I AM STAR</span>
-          </a>
-          <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-            <a href="#home" class="mr-5 hover:text-gray-900 font-medium">Home</a>
-            <a href="#about us" class="mr-5 hover:text-gray-900 font-medium">About Us</a>
-            <a href="#services" class="mr-5 hover:text-gray-900 font-medium">Services</a>
-          </nav>
-          <a href="#kontak" class="bg-red-500 hover:bg-red-500 text-white font-medium py-2 px-4 rounded">Contact Us</a>
-            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-                <path d="M5 12h14M12 5l7 7-7 7"></path>
-            </svg>
-          </button> 
-        </div>
-    </header>
+  <!-- Navbar -->
+<header class="fixed top-0 left-0 right-0 bg-white shadow-md z-50">
+  <div class="container mx-auto px-4 py-3 flex items-center justify-between">
+    <!-- Logo -->
+    <a href="#" class="flex items-center text-gray-900">
+      <img src="image/bint.png" alt="logo" class="w-10 h-10 p-2 bg-white rounded-full" />
+      <span class="ml-3 text-2xl font-bold">I AM STAR</span>
+    </a>
 
-    <!--Home-->
-    <section class="text-gray-600 body-font">
-      <div id="home" class="bg-blue-200 p-4 mb-0 mt-16 h-[735px]">         
-        <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
-          <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
-            <h1 class="title-font sm:text-6xl text-3xl mb-4 font-bold text-blue-800">Hello! I am 
-              <br class="hidden lg:inline-block">Bintang Avriano
-            </h1>
-            <p class="mb-8 leading-relaxed font-medium text-lg text-gray-900">A unique design product created by a 16 year old who is
-                still attending vocational school, specializing in website design.</p>
-            <div class="flex justify-center">
-              <a href="#about us" class="bg-red-500 hover:bg-red-500 text-white font-medium py-2 px-4 rounded">Hire Me</a>
-            </div>
+    <!-- Hamburger -->
+    <button id="menu-toggle" class="md:hidden text-gray-800 focus:outline-none">
+      <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+          d="M4 6h16M4 12h16M4 18h16" />
+      </svg>
+    </button>
+
+    <!-- Menu Items -->
+    <nav id="menu"
+      class="hidden md:flex md:items-center md:space-x-8 absolute md:static top-16 left-0 w-full md:w-auto bg-white md:bg-transparent md:shadow-none shadow-md py-4 md:py-0 px-6 md:px-0 transition-all duration-300 ease-in-out">
+      <a href="#home" class="block py-2 md:py-0 hover:text-red-500 font-medium">Home</a>
+      <a href="#about-us" class="block py-2 md:py-0 hover:text-red-500 font-medium">About Us</a>
+      <a href="#services" class="block py-2 md:py-0 hover:text-red-500 font-medium">Services</a>
+      <a href="#kontak"
+        class="mt-2 md:mt-0 inline-block bg-red-500 hover:bg-red-600 text-white font-medium py-2 px-4 rounded transition duration-300">Contact
+        Us</a>
+    </nav>
+  </div>
+</header>
+
+<!-- Script -->
+<script>
+  const toggleBtn = document.getElementById('menu-toggle');
+  const menu = document.getElementById('menu');
+
+  toggleBtn.addEventListener('click', () => {
+    menu.classList.toggle('hidden');
+  });
+</script>
+
+    <!-- Home -->
+<section id="home" class="text-gray-600 body-font mt-16">
+  <div class="bg-blue-200 px-4 py-12">
+    <div class="container mx-auto flex flex-col-reverse md:flex-row items-center">
+      
+      <!-- Text -->
+      <div class="md:w-1/2 flex flex-col text-center md:text-left mb-10 md:mb-0">
+        <h1 class="text-3xl sm:text-5xl font-bold text-blue-800 leading-tight">
+          Hello! I am <br class="hidden lg:inline-block"> Bintang Avriano
+        </h1>
+        <p class="mt-4 text-gray-900 text-lg font-medium">
+          A unique design product created by a 16 year old who is still attending vocational school, specializing in website design.
+        </p>
+        <div class="mt-6 flex justify-center md:justify-start">
+          <a href="#about-us" class="bg-red-500 hover:bg-red-600 text-white font-medium py-2 px-6 rounded transition duration-300">
+            Hire Me
+          </a>
         </div>
-          <div class="lg:max-w-lg lg:w-full md:w-3/4 w-5/6 translate-y-5">
-            <img src="image/osis_1 copy-removebg-preview.png" alt="Foto" class="h-[500px] w-[600px] object-cover">
-          </div>
-        </div>
-        <div class="bg-gradient-to-r from-blue-100 to-blue-200 p-4 -mt-20">
-            <div class="flex flex-wrap -m-4 text-center">
-              <div class="p-4 sm:w-1/4 w-1/2">
-                <h2 class="title-font font-bold sm:text-4xl text-3xl text-gray-900">2.7K</h2>
-                <p class="leading-relaxed text-gray-900 text-lg">Users</p>
-              </div>
-              <div class="p-4 sm:w-1/4 w-1/2">
-                <h2 class="title-font font-bold sm:text-4xl text-3xl text-gray-900">1.9K</h2>
-                <p class="leading-relaxed text-gray-900 text-lg">Subscribes</p>
-              </div>
-              <div class="p-4 sm:w-1/4 w-1/2">
-                <h2 class="title-font font-bold sm:text-4xl text-3xl text-gray-900">50</h2>
-                <p class="leading-relaxed text-gray-900 text-lg">Downloads</p>
-              </div>
-              <div class="p-4 sm:w-1/4 w-1/2">
-                <h2 class="title-font font-bold sm:text-4xl text-3xl text-gray-900">6</h2>
-                <p class="leading-relaxed text-gray-900 text-lg">Products</p>
-              </div>
-            </div>
-          </div>
       </div>
-    </section>
+
+      <!-- Image -->
+      <div class="md:w-1/2 flex justify-center mb-8 md:mb-0">
+        <img src="image/osis_1 copy-removebg-preview.png" alt="Foto" class="w-full max-w-[400px] md:max-w-[500px] h-auto object-contain" />
+      </div>
+    </div>
+
+    <!-- Stats -->
+    <div class="bg-gradient-to-r from-blue-100 to-blue-200 mt-12 p-6 rounded-xl">
+      <div class="grid grid-cols-2 sm:grid-cols-4 gap-6 text-center">
+        <div>
+          <h2 class="text-3xl sm:text-4xl font-bold text-gray-900">2.7K</h2>
+          <p class="text-lg text-gray-900">Users</p>
+        </div>
+        <div>
+          <h2 class="text-3xl sm:text-4xl font-bold text-gray-900">1.9K</h2>
+          <p class="text-lg text-gray-900">Subscribes</p>
+        </div>
+        <div>
+          <h2 class="text-3xl sm:text-4xl font-bold text-gray-900">50</h2>
+          <p class="text-lg text-gray-900">Downloads</p>
+        </div>
+        <div>
+          <h2 class="text-3xl sm:text-4xl font-bold text-gray-900">6</h2>
+          <p class="text-lg text-gray-900">Products</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
     <!--About Us-->
     <section class="text-gray-600 body-font">
@@ -163,27 +190,34 @@
       </div>
     </section>
   
-    <!--Services-->
-    <section class="text-gray-600 body-font mb-16">
-      <div id="services" class="bg-blue-200 p-4 mb-0 mt-16 h-[730px]">         
-        <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
-        <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
-          <h1 class="title-font sm:text-6xl text-3xl mb-4 font-bold text-blue-800">Customers always 
-            <br class="hidden lg:inline-block">enjoy my work
-          </h1>
-          <p class="mb-8 leading-relaxed text-gray-900 font-medium text-xl">Customers can always order design products from me, by contacting me via the contact or email listed below, or customers can complain if there is an error in my design creation.</p>
-          <div class="flex justify-center">
-            <h1 class="title-font sm:text-2xl text-2xl mb-4 font-bold text-red-500">1. Best Quality
-            <br class="hidden lg:inline-block">2. Commitment
-            <br class="hidden lg:inline-block">3. 24 Hours Active
-          </h1>
-          </div>
-        </div>
-        <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 translate-y-32">
-          <img class="w-[500px] w-[600px] object-cover relative -top-36" alt="hero" src="image/iden_1 copy-removebg-preview.png">
-        </div>
-      </div>
-    </section>
+    <!-- Services -->
+<section id="services" class="text-gray-600 body-font bg-blue-200 py-16 mt-16">
+  <div class="container mx-auto flex flex-col-reverse lg:flex-row items-center px-6 lg:px-20">
+    
+    <!-- Text Content -->
+    <div class="lg:w-1/2 w-full flex flex-col items-center lg:items-start text-center lg:text-left">
+      <h1 class="text-3xl sm:text-4xl lg:text-5xl font-bold text-blue-800 mb-4 leading-tight">
+        Customers always <br class="hidden lg:inline-block" /> enjoy my work
+      </h1>
+      <p class="text-base sm:text-lg text-gray-900 font-medium mb-6">
+        Customers can always order design products from me, by contacting me via the contact or email listed below,
+        or customers can complain if there is an error in my design creation.
+      </p>
+      <ul class="text-red-500 font-bold text-lg sm:text-xl leading-relaxed">
+        <li>1. Best Quality</li>
+        <li>2. Commitment</li>
+        <li>3. 24 Hours Active</li>
+      </ul>
+    </div>
+
+    <!-- Image -->
+    <div class="lg:w-1/2 w-full mb-10 lg:mb-0 flex justify-center">
+      <img src="image/iden_1 copy-removebg-preview.png" alt="Services Image"
+        class="w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg object-contain" />
+    </div>
+  </div>
+</section>
+
 
     <!--Projek-->
     <section class="py-5 bg-white">
